update to soapui 5.5.0 and added extra documentation